--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>JASON PROJECT</name>
+	<name>MAIN BRANCH</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
-		<sonar.organization>fata-organa-solusi</sonar.organization>
+		<sonar.organization>personaljm</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
